# Rust-playground

./: Cargo.toml  README.md
crates/golden_app/: Cargo.toml  tauri.conf.json
crates/golden_app/src/: lib.rs  main.rs
crates/golden_core/: Cargo.toml
crates/golden_core/src/: lib.rs  schema.rs
crates/golden_core/src/data/: container.rs  custom.rs  handles.rs  mod.rs  parameter.rs
crates/golden_core/src/edits/: apply.rs  coalesce.rs  mod.rs
crates/golden_core/src/engine/: mod.rs  process_ctx.rs  scheduling.rs
crates/golden_core/src/events/: inbox.rs  mod.rs
crates/golden_core/src/events/routing/: bubbling.rs  mod.rs  subscriptions.rs
crates/golden_core/src/graph/: hierarchy.rs  mod.rs  node.rs  queries.rs
crates/golden_core/src/history/: mod.rs  sessions.rs
crates/golden_core/src/meta/: mod.rs
crates/golden_core/src/persistence/: load.rs  migrate.rs  mod.rs  save.rs
crates/golden_core/src/values/: mod.rs  reference.rs
crates/golden_macros/: Cargo.toml
crates/golden_macros/src/: lib.rs
crates/golden_net/: Cargo.toml
crates/golden_net/src/: app_server.rs  http_server.rs  lib.rs  snapshot.rs  ws_server.rs
crates/golden_prelude/: Cargo.toml
crates/golden_prelude/src/: lib.rs
crates/golden_schema/: Cargo.toml
crates/golden_schema/src/: events.rs  ids.rs  lib.rs  meta.rs  values.rs
crates/golden_schema/src/persistence/: file_format.rs  mod.rs
crates/golden_schema/src/ui/: codecs.rs  dtos.rs  messages.rs  mod.rs
crates/golden_tauri/: Cargo.toml  tauri.conf.json
crates/golden_tauri/src/: main.rs
crates/golden_ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
crates/golden_ui/src/: app.css  app.d.ts
crates/golden_ui/src/lib/: styles.css
crates/golden_ui/src/lib/app/: config.ts  panels.ts
crates/golden_ui/src/lib/components/: PanelShell.svelte  ParamControl.svelte  TreeView.svelte
crates/golden_ui/src/lib/panels/: index.ts
crates/golden_ui/src/lib/stores/: engine.ts
crates/golden_ui/src/lib/utils/: values.ts
crates/golden_ui/src/routes/: +layout.svelte  +page.svelte
docs/: Golden-Core.md
scripts/: dev.bat  dev.ps1  dev.sh
src/: main.rs
src-ui/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
src-ui/src/lib/app/: config.ts  panels.ts
src-ui/src/routes/: +layout.svelte  +page.svelte
(+5 files in other folders)
