[package]
name = "golden_net"
version = "0.1.0"
edition = "2024"

[dependencies]
golden_core = { path = "../golden_core" }
golden_schema = { path = "../golden_schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
futures-util = "0.3"
tokio-tungstenite = "0.23"
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
